[package]
name = "treasury"
version = "0.1.0"
authors = ["Gbolahan Akande <geakande@gmail.com>"]
edition = "2024"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.4", version = "6.0.0-alpha.4", default-features = false }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.4", version = "6.0.0-alpha.4" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
substrate = []
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(ink_abi, values("ink", "sol", "all"))'
]
